添加说明文字

--- a/app/view1/view1.html
+++ b/app/view1/view1.html
@@ -13,7 +13,7 @@
         </tr>
     </tbody>
 </table>
-
+<p>修改列排序</p>
 <table>
     <tbody>
         <tr  ng-repeat="col in vm.sceneCol track by $index">
